@@ -45,7 +45,7 @@ minor_version = int(minor_version)
 name = 'trytonspain_aeat_182'
 download_url = 'https://bitbucket.org/trytonspain/trytond-aeat_182'
 
-requires = ['retrofix']
+requires = ['retrofix>=0.21']
 for dep in info.get('depends', []):
     if not re.match(r'(ir|res)(\W|$)', dep):
         prefix = MODULE2PREFIX.get(dep, 'trytond')
