@@ -1,1 +1,2 @@
 Version 4.0.0 - 2016-05-03
+* Require version 0.21 or more of retrofix library
